<resources>
    <string name="app_name">WeDeliver</string>
    <string name="firstname">Name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">E-Mail</string>
    <string name="logo">Logo</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_people">Show map</string>
    <string name="order_something">Order something</string>
    <string name="add_product">Add product</string>
    <string name="street">Street</string>
    <string name="house_number">Number</string>
    <string name="city">City</string>
    <string name="postal">Postal</string>
    <string name="store">Select store</string>
    <string name="order_confirmation">Confirm order</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location" translatable="false">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied" translatable="false">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast" translatable="false">Location permission is required for this demo.</string>
    <string name="requests">Show requests</string>
    <string name="active">Active</string>
    <string name="accept_order">Accept the order</string>
    <string name="address">Address</string>
    <string name="product">Product</string>
    <string name="store2">Store</string>
    <string name="orders">orders</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="my_account">My Account</string>
    <string name="logout">Log out</string>
    <string name="create_order">New Order</string>
    <string name="my_orders">My Orders</string>
    <string name="all_requests">All Requests</string>
</resources>
